fix z-index in purchases sass

--- a/app/sass/platform/_purchases.scss
+++ b/app/sass/platform/_purchases.scss
@@ -155,7 +155,7 @@
                 position:absolute;
                 top: -26px;
                 left: 17px;
-                z-index:5;
+                z-index: 1;
                 text-align: center;
 
                 .numerator {
